--- a/Scripts/Manuscript.Rmd
+++ b/Scripts/Manuscript.Rmd
@@ -287,13 +287,13 @@ grid.raster(img)
 We estimated the participation of the transboundary stocks that are shifting between neighboring EEZs relative to the total revenue from all transboundary stocks that each EEZ has. On average, shifting transboundary stocks represented 27% to 23% (1 and 2 s.d. thresholds) of annual revenue from fisheries targeting transboundary stocks across the world's EEZs between 2004 and 2010 (Fig. \@ref(fig:toeFigure2)A). However, large variation exists, with shifting stocks representing less than 1% of fishing revenue in some countries (e.g., Ireland) and over 90% in others (e.g., Marshall Islands). Moreover, in some EEZs, while few transboundary stocks are projected to shift beyond historical variability, they still represent a large proportion of revenue derived from fisheries within that EEZ (e.g., Peru). 
 
 
-**While the total number of shifting stocks is important for fisheries management, having high-valuable stocks shifting sooner could be a much bigger concern than having many low-value stocks shifting. Thus, we looked at the year of range shift of the top five most valuable transboundary stocks of each country (New Fig 4). On average, countries are projected to see a range shift of the top five most valuable stocks by 2038 $\pm$ 25 years under threshold two( 2028 $\pm$ 22 years under threshold one). Moreover, our projections suggest that these high value stocks are already shifting in 52 (27%) coastal nations under threshold two (n = 85 44% under threshold one), with the regions of Latin America and the Caribbean (n = 63), Sub-Saharan Africa (n = 59), South-eastern Asia  (n = 28), and Polynesia (n = 19) presenting the larger number of shifting stocks (25% of total high value stocks).** 
+**While the total number of shifting stocks is important for fisheries management, having high-valuable stocks shifting sooner could be a much bigger concern than having many low-value stocks shifting. Thus, we looked at the year of range shift of the top five most valuable transboundary stocks of each country (New Fig 4). On average, countries are projected to see a range shift of the top five most valuable stocks by 2038 $\pm$ 25 years under threshold two (2028 $\pm$ 22 years under threshold one). Moreover, our projections suggest that these high value stocks are already shifting in 52 (27%) coastal nations under threshold two (n = 85 44% under threshold one), with the regions of Latin America and the Caribbean (n = 63), Sub-Saharan Africa (n = 59), South-eastern Asia  (n = 28), and Polynesia (n = 19) presenting the larger number of shifting stocks (25% of total high value stocks).** 
 
 
 <!-- We estimated the current (i.e., 2005 - 2010) contribution of shifting stocks to yearly fishing revenue generated from fisheries targeting transboundary stocks within global EEZs for both thresholds (one and two s.d.). Within five years of the UN 2030 Agenda timeline, 979 transboundary stocks accounting for USD 5.3 billion in fishing revenue are projected to shift within 76 EEZs considering a two s.d. threshold (Fig. \@ref(fig:toeFigure3); above Fisheries >75th percentile). In this case, 321 stocks shifting in just eleven countries account for 4.2 billion USD (Fig. \@ref(fig:toeFigure3)). The number of transboundary stocks shifting from historical variability was highest in the EEZs of Spain (n = 122), France (n = 85), China and Portugal (both n = 73), and Senegal (n = 66) (Fig. \@ref(fig:toeFigure3)). The values are substantially higher when considering a more relaxed threshold. In this case, 2,136 stocks accounting for USD 24 billion in fishing revenue are projected to shift within five years of the UN 2030 Agenda timeline in 134 EEZs. -->
 
 
-```{r toeFigure3, eval = T,  echo = F, fig.width=8, fig.height=6, fig.pos= "H", fig.cap =  "Average range shift of transboundary stocks and corresponding fishing revenue per country. Countries are coded according to different colored symbols representative of 5 distinct regions. The horizontal line separates countries above and below the 75th percentile of annual fishing revenue. Showing country names for the eleven nations above the 75th percentile and projected to have an average shift across transboundary stocks within its EEZ within 5 years of the 2030 Agenda deadline."}
+```{r toeFigure3, eval = T,  echo = F, fig.width=8, fig.height=6, fig.pos= "H", fig.cap =  "Year of change in the shared distribution of the top five most valuable transboundary stocks of each country. EEZs with no distributional shift between 2006 and 2100 are represented in pale blue."}
 
 img <- readPNG("../Figures/Fig4.png")
 grid.raster(img)
@@ -314,6 +314,11 @@ grid.raster(img)
 ```
 
 <!-- ![Figure 1. Changes in stock share ratio below each country’s threat point by 2030 (2021-2040) relative to 1951-2005. Lines represent the average change in transboundary stock share ratio with arrows going from EEZ with decreasing stock share (point) to those gaining shares (arrowhead). Land polygons represent the percentage of stocks that are projected to change their stock share ratio beyond the identified threat point with higher gains identified in warmer colors (green to yellow). Panel B zooms into specific areas shown within the gray dashed line boundaries in A.](../Figures/Fig1.png) -->
+
+**Most EEZs are expected to see a relative small number of stocks shifting their SSR (Fig. \@ref(fig:toeFigure4)A). On average, EEZs are expected to see changes in SSR on 16% $\pm$ 10 of transboundary stocks increasing to 20% $\pm$ 11 by mid of the $21^{st}$ century. However, this result masks mask large variation in changes across EEZs. By early century, the EEZs of French Guiana (54%), South Africa (59%), Falkland Isl. (61%), Brazil (75%) and Kerguelen Isl., and Pitcairn (both 100%) are projected to see changes in SSR of over 50% in their transboundary stocks. On the other hand, some island territories such as Anguilla are projected to see changes in as low as 2% of their transboundary stocks.**
+
+**Shifts in the SSR of the top 5 most valuable transboundary stocks of each country are projected to be 61 $\pm$ 18% by 2030 and 72 $\pm$ 17% by 2050 in 83% of the world's EEZs (Figure SX). In some cases, the SSR of one EEZ is projected increase in more than double relative to their neighbors (e.g., from 10% to 30% SSR). Some of these EEZs include Guatemala gaining from Mexico in the Pacific, Cyprus from Greece and Turkey in the Mediterranean Sea, and Russia from Norway and Japan in the Barents Sea and Western Pacific, respectively**
+
 
 
 <!-- The direction and intensity of shifts in transboundary stocks are largely related to regional changes in biogeography and the geometry of EEZs (Fig. \@ref(fig:toeFigure4)A). Along the Atlantic and Pacific coasts of Northern and Southern America and the Atlantic coast of Southern Africa, the proportion of the stock is expected to follow a projected poleward shift. However, shifts in the coasts of Pacific Central America and West Africa occur along an equatorial direction. Here, transboundary species follow specific oceanographic regions (*sensu* Longhurst) like upwelling zones (e.g., Humboldt current) and local patterns of oxygen availability, in addition to temperature gradients. Regions where EEZs are relatively small and have multiple borders (e.g., Caribbean or Northwestern Europe) are expected to have a particularly complex exchange of stock share ratio with no clear established pattern (Fig. \@ref(fig:toeFigure4)B). -->
